Adds todays progress of fixing DTOs